--- a/Python Document 1 - Copy.ipynb
+++ b/Python Document 1 - Copy.ipynb
@@ -86,14 +86,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n"
+      "('bike', 'truck', 'car')\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'tuple' object has no attribute 'append'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7616/3648088244.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 4\u001b[1;33m \u001b[0mmode\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'airplane'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmode\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'tuple' object has no attribute 'append'"
      ]
     }
    ],
@@ -827,9 +838,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "J\n",
+      "i\n",
+      "m\n",
+      " \n",
+      "T\n",
+      "u\n",
+      "r\n",
+      "e\n",
+      "r\n"
+     ]
+    }
+   ],
    "source": [
     "name = \"Jim Turner\"\n",
     "\n",
@@ -857,9 +884,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(20):\n",
     "    if i == 5:\n",
@@ -902,9 +941,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i =  0 j =  0\n",
+      "i =  0 j =  1\n",
+      "i =  0 j =  2\n",
+      "i =  0 j =  3\n",
+      "i =  0 j =  4\n",
+      "i =  1 j =  0\n",
+      "i =  1 j =  1\n",
+      "i =  1 j =  2\n",
+      "i =  1 j =  3\n",
+      "i =  1 j =  4\n",
+      "i =  2 j =  0\n",
+      "i =  2 j =  1\n",
+      "i =  2 j =  2\n",
+      "i =  2 j =  3\n",
+      "i =  2 j =  4\n",
+      "i =  3 j =  0\n",
+      "i =  3 j =  1\n",
+      "i =  3 j =  2\n",
+      "i =  3 j =  3\n",
+      "i =  3 j =  4\n",
+      "i =  4 j =  0\n",
+      "i =  4 j =  1\n",
+      "i =  4 j =  2\n",
+      "i =  4 j =  3\n",
+      "i =  4 j =  4\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(5):\n",
     "    for j in range(5):\n",
@@ -1091,9 +1162,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "That didn't work! Change your number!\n"
+     ]
+    }
+   ],
    "source": [
     "# Use this to log out graceful and useful error messages\n",
     "# Does not stop the program! Neato!\n",
@@ -1292,9 +1371,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Max', 'Sam', 'Josh', ['Sally', 'Sue', 'Tameka']]\n",
+      "Sue\n"
+     ]
+    }
+   ],
    "source": [
     "# Lists can hold any type of other element: Including other lists!\n",
     "# They can go as deep as you want; this is called nested lists\n",
@@ -1313,9 +1401,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Max\n",
+      "Sam\n",
+      "Josh\n",
+      "['Sally', 'Sue', 'Tameka']\n",
+      "Max\n",
+      "Sam\n",
+      "Josh\n",
+      "['Sally', 'Sue', 'Tameka']\n"
+     ]
+    }
+   ],
    "source": [
     "# Two ways to loop through a list! One is by index; the other is by using the 'in' keyword\n",
     "\n",
@@ -1436,23 +1539,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your age?: 19\n",
-      "Adult\n"
+      "What is your age?: 22\n",
+      "adult\n"
      ]
     }
    ],
    "source": [
     "age = int(input(\"What is your age?: \"))\n",
-    "age >= 18\n",
-    "print(\"Adult\")\n",
-    "\n",
+    "if age < 18:\n",
+    "    print(\"kid\")\n",
+    "elif age <= 65:\n",
+    "    print(\"adult\")\n",
+    "else:\n",
+    "    print(\"Senior\")\n",
     "\n"
    ]
   },
