--- a/Python Document II.ipynb
+++ b/Python Document II.ipynb
@@ -788,9 +788,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Hello World'"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# User defined:\n",
     "def sayHello():\n",
@@ -808,16 +819,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "What is your first name? Jim\n",
-      "Hello, Joel Carter\n",
-      "Hello, Jim Turner\n"
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (Temp/ipykernel_19528/545498793.py, line 4)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\jimtu\\AppData\\Local\\Temp/ipykernel_19528/545498793.py\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    return f'Hello, {first_name} {last_name}'\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
      ]
     }
    ],
@@ -829,8 +839,8 @@
     "\n",
     "a_name = input(\"What is your first name? \")\n",
     "\n",
-    "print(printFullName(\"Joel\", \"Carter\"))\n",
-    "print(printFullName(a_name, \"Turner\"))"
+    "\n",
+    "print(a_name, \"Turner\")"
    ]
   },
   {
@@ -889,9 +899,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The hero's name is Superman and superpower is flying\""
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def printSuperHero(name, power = \"flying\"):\n",
     "    return f\"The hero's name is {name} and superpower is {power}\"\n",
