--- a/Python Document III.ipynb
+++ b/Python Document III.ipynb
@@ -65,17 +65,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'Dave': '255 Main St', 'Sean': '522 1st St', 0: 'This is a value for the key or 0'}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Keys should be unique\n",
     "# Can use numbers or strings as keys\n",
@@ -106,18 +98,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "255 Main St\n",
-      "This is a value for the key or 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dict[key]\n",
     "#   this returns the value\n",
@@ -136,17 +119,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      " 2018 Chevrolet Silverado\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the dict below\n",
     "truck = {\n",
@@ -167,23 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Dave': '255 Main St',\n",
-       " 'Sean': '522 1st St',\n",
-       " 0: 'This is a value for the key or 0',\n",
-       " 'bob': 'From Ohio'}"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dict(key) = value\n",
     "\n",
@@ -201,23 +162,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Dave': '255 Main St',\n",
-       " 'Sean': '522 1st St',\n",
-       " 0: 'This is a value for the key or 0',\n",
-       " 'bob': 'Nashville'}"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# dict[key] = value\n",
     "dict_3['bob'] = 'Nashville'\n",
@@ -234,22 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'Dave': '255 Main St',\n",
-       " 'Sean': '522 1st St',\n",
-       " 0: 'This is a value for the key or 0'}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# del dict['key']\n",
     "del dict_3['bob']\n",
@@ -266,19 +200,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dave 255 Main St\n",
-      "Sean 522 1st St\n",
-      "0 This is a value for the key or 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# .items()\n",
     "# a, b, c = 1, 2, 3\n",
@@ -299,19 +223,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Dave\n",
-      "Sean\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# .keys()\n",
     "\n",
@@ -328,19 +242,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "255 Main St\n",
-      "522 1st St\n",
-      "This is a value for the key or 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# .values()\n",
     "for value in dict_3.values():\n",
@@ -362,21 +266,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Max has blue eyes\n",
-      "Lilly has brown eyes\n",
-      "Barney has blue eyes\n",
-      "Larney has brown eyes\n",
-      "Ted has purple eyes\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# use the dict below\n",
     "\n",
@@ -402,20 +294,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('Barney', 'blue'), ('Larney', 'brown'), ('Lilly', 'brown'), ('Max', 'blue'), ('Ted', 'purple')]\n",
-      "['Barney', 'Larney', 'Lilly', 'Max', 'Ted']\n",
-      "['blue', 'blue', 'brown', 'brown', 'purple']\n",
-      "['blue', 'blue', 'brown', 'brown', 'purple']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# sorts variables in order\n",
     "# sorted(dict.values()) or dict.keys() or dict.items()\n",
@@ -451,19 +332,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "smith\n",
-      "ipod\n",
-      "water bottle\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# be careful when using numbers as keys in dictionaries, don't confuse them with indexes\n",
     "\n",
@@ -485,21 +356,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3.99\n",
-      "cho\n",
-      "va\n",
-      "oreo\n",
-      "PB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# to get values, must traverse through keys\n",
     "food_dict = {\n",
@@ -527,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,20 +406,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "value\n",
-      "Elapsed time for dictionary: 0.0\n",
-      "9999999\n",
-      "Elapsed time for list: 0.7316288948059082\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# tracking time for dictionary\n",
     "start_time = time.time()\n",
@@ -605,24 +453,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyboardInterrupt",
-     "evalue": "Interrupted by user",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13200/3775538871.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m             \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnameList\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m             \u001b[1;32mbreak\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[0mnames\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_13200/3775538871.py\u001b[0m in \u001b[0;36mnames\u001b[1;34m()\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      8\u001b[0m     \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 9\u001b[1;33m         \u001b[0mname\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"What is your name? \\n \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     10\u001b[0m         \u001b[0maddress\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0minput\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"What is your address? \\n \"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m         \u001b[0mnameList\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mname\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m=\u001b[0m \u001b[0maddress\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[1;34m(self, prompt)\u001b[0m\n\u001b[0;32m   1004\u001b[0m                 \u001b[1;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1005\u001b[0m             )\n\u001b[1;32m-> 1006\u001b[1;33m         return self._input_request(\n\u001b[0m\u001b[0;32m   1007\u001b[0m             \u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mprompt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1008\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m\"shell\"\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\anaconda3\\lib\\site-packages\\ipykernel\\kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[1;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[0;32m   1049\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1050\u001b[0m                 \u001b[1;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 1051\u001b[1;33m                 \u001b[1;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Interrupted by user\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[1;32mNone\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   1052\u001b[0m             \u001b[1;32mexcept\u001b[0m \u001b[0mException\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   1053\u001b[0m                 \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"Invalid Message:\"\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import clear_output\n",
     "# step 1: write a function that takes in information and stores it in a dictionary \n",
@@ -636,8 +469,8 @@
     "        address = input(\"What is your address? \\n \")\n",
     "        nameList[name]= address\n",
     "        print(nameList)\n",
-    "        response = input(\"Type 'quit' if you are done.\")\n",
-    "        if response == \"quit\":\n",
+    "        response = input(\"Are you done? Y or N. \\n \")\n",
+    "        if response == \"Y\":\n",
     "            print(nameList)\n",
     "            break\n",
     "names()"
@@ -939,53 +772,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What is your name? \n",
-      " Jim\n",
-      "Welcome! Are you ready to shop? yes\n",
-      "Add item? \n",
-      " apples\n",
-      "How many? \n",
-      " 2\n",
-      "{'apples': '2'}\n",
-      "Would you like to add an item or quit?add\n",
-      "Add item? \n",
-      " bananas\n",
-      "How many? \n",
-      " 5\n",
-      "{'apples': '2', 'bananas': '5'}\n",
-      "Would you like to add an item or quit?quit\n",
-      "{'apples': '2', 'bananas': '5'}\n"
+      "What would you like from the store?\n",
+      "\n",
+      "Enter 'done' to quit shopping.\n",
+      "Enter 'cart' to show your current cart.\n",
+      "Enter 'delete' to delete an item from your cart.\n",
+      "Enter 'add' to get back to your cart.\n",
+      "\n",
+      "> apples\n",
+      "You added apples. Your cart now has 1 items.\n",
+      "> oranges\n",
+      "You added oranges. Your cart now has 2 items.\n",
+      "> bread\n",
+      "You added bread. Your cart now has 3 items.\n",
+      "> milk\n",
+      "You added milk. Your cart now has 4 items.\n",
+      "> cart\n",
+      "Here is your Cart :\n",
+      "apples\n",
+      "oranges\n",
+      "bread\n",
+      "milk\n",
+      "> bleach\n",
+      "You added bleach. Your cart now has 5 items.\n",
+      "> done\n",
+      "Here is your Cart :\n",
+      "apples\n",
+      "oranges\n",
+      "bread\n",
+      "milk\n",
+      "bleach\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "'list' object is not callable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_26148/3400195260.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m     \u001b[0maddItem\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnew_item\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m \u001b[0mshopCart\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'list' object is not callable"
      ]
     }
    ],
    "source": [
-    "def shopList():\n",
-    "    itemList = {}\n",
-    "    \n",
-    "    name = input(\"What is your name? \\n \")\n",
-    "    resonse = input(\"Welcome! Are you ready to shop? \")\n",
-    "    \n",
-    "    \n",
-    "    while True:\n",
-    "        addItem = input(\"Add item? \\n \")\n",
-    "        sumItem = input(\"How many? \\n \")\n",
-    "        itemList[addItem]= sumItem\n",
-    "        print(itemList)\n",
-    "        response = input(\"Would you like to add an item or quit?\")\n",
-    "        if response == \"quit\":\n",
-    "            print(itemList)\n",
-    "            break\n",
-    "        \n",
+    "shopCart = []\n",
     "\n",
+    "def myCart():\n",
+    "    print(\"What would you like from the store?\")\n",
+    "    print(\"\"\"\n",
+    "Enter 'done' to quit shopping.\n",
+    "Enter 'cart' to show your current cart.\n",
+    "Enter 'delete' to delete an item from your cart.\n",
+    "Enter 'add' to get back to your cart.\n",
+    "\"\"\")\n",
+    "def showList():\n",
+    "    print(\"Here is your Cart :\")\n",
+    "    for item in shopCart:\n",
+    "        print(item)\n",
     "\n",
-    "shopList()\n"
+    "def addItem(new_item):\n",
+    "    shopCart.append(new_item)\n",
+    "    print(\"You added {}. Your cart now has {} items.\".format(new_item, len(shopCart))) \n",
+    "def deleteItem():\n",
+    "    delete_me = input(\"Which item would you like to delete from your cart? \")\n",
+    "    shopCart.remove(delete_me)\n",
+    "    print(\"{} has been removed from the cart.\".format(delete_me))\n",
+    "\n",
+    "myCart()\n",
+    "\n",
+    "while True:\n",
+    "    new_item = input(\"> \")\n",
+    "\n",
+    "    if new_item == 'done':\n",
+    "        showList()\n",
+    "        break\n",
+    "    elif new_item == 'delete':\n",
+    "        showList()\n",
+    "        deleteItem()\n",
+    "        continue\n",
+    "    elif new_item == 'add':\n",
+    "        show_help()\n",
+    "        continue\n",
+    "    elif new_item == 'cart':\n",
+    "        showList()\n",
+    "        continue\n",
+    "    addItem(new_item)\n",
+    "\n",
+    "shopCart()"
    ]
   },
   {
@@ -1000,6 +882,23 @@
     "2) Has a function to calculate the circumference of a circle <br><br>\n",
     "<b>Program in Jupyter Notebook should take in user input and use imported functions to calculate a circle's circumference or a houses square footage</b>\n",
     "</p>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import modulehouse\n",
+    "print(modulehouse)"
    ]
   },
   {
