--- a/advanced_python_lambda/Advanced-Python-BuiltInFunctions-Map-Filter-Reduce-Recursion-Updated-Lecture-Rangers59.ipynb
+++ b/advanced_python_lambda/Advanced-Python-BuiltInFunctions-Map-Filter-Reduce-Recursion-Updated-Lecture-Rangers59.ipynb
@@ -195,7 +195,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<function returnFunc.<locals>.multiply at 0x000001FC4FF4E040>\n",
+      "<function returnFunc.<locals>.multiply at 0x000001BDA8B8EA60>\n",
       "8\n",
       "19\n"
      ]
@@ -233,9 +233,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "24\n",
+      "12\n"
+     ]
+    }
+   ],
    "source": [
     "# Lambda x : True if (condition) else False\n",
     "f_condition = lambda num : num * 2 if num > 10 else num + 2\n",
@@ -257,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -295,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +412,7 @@
      "output_type": "stream",
      "text": [
       "['Andy', 'Angelica']\n",
-      "<function a_names at 0x000001FC4FFF2E50>\n"
+      "<function a_names at 0x000001BDA8B9E0D0>\n"
      ]
     }
    ],
@@ -429,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -455,14 +465,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 5, 2.9, 4.8]\n"
+     "ename": "NameError",
+     "evalue": "name 'below_avg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_17984/1204701653.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[0mbelow_mean\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;32mTrue\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mx\u001b[0m \u001b[1;33m<=\u001b[0m \u001b[0mmean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnums\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32melse\u001b[0m \u001b[1;32mFalse\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnums\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 6\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mbelow_avg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'below_avg' is not defined"
      ]
     }
    ],
@@ -492,18 +506,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n",
-      "-26\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from functools import reduce\n",
     "\n",
@@ -535,17 +540,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "30\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "result_lamb = reduce(lambda x,y: x + y, list_1)\n",
     "print(result_lamb)"
@@ -561,17 +558,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "24\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "my_list = [1, 2, 3, 4]\n",
     "\n",
@@ -596,31 +585,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "addNums(5) = 5 + addNums(4)\n",
-      "addNums(4) = 4 + addNums(3)\n",
-      "addNums(3) = 3 + addNums(2)\n",
-      "addNums(2) = 2 + addNums(1)\n",
-      "addNums(1) = 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "15"
-      ]
-     },
-     "execution_count": 31,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def addNums(num):\n",
     "    # Set base case for recusive function\n",
@@ -643,20 +610,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "120"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 5! = 5 * 4 * 3 * 2 * 1\n",
     "def factorial(num):\n",
@@ -678,31 +634,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "subNums(5): 5 - subNums(4)\n",
-      "subNums(4): 4 - subNums(3)\n",
-      "subNums(3): 3 - subNums(2)\n",
-      "subNums(2): 2 - subNums(1)\n",
-      "subNums(1): 1\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "3"
-      ]
-     },
-     "execution_count": 30,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# return num - subNums(num - 1)\n",
     "# subtract(10)\n",
@@ -735,35 +669,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n",
-      "4\n",
-      "6\n",
-      "8\n",
-      "10\n",
-      "12\n",
-      "14\n",
-      "16\n",
-      "18\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<generator object my_range at 0x000001FC50020040>"
-      ]
-     },
-     "execution_count": 36,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def my_range(stop, start, step = 2):\n",
     "    while start < stop:\n",
@@ -802,26 +710,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "81\n",
-      "64\n",
-      "49\n",
-      "36\n",
-      "25\n",
-      "16\n",
-      "9\n",
-      "4\n",
-      "1\n",
-      "0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def my_square(stop, start, step = 1):\n",
     "    while start >= stop:\n",
@@ -851,17 +742,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[' ', 'Argentina', ' ', 'San Diego', '  ', 'Boston', 'New York']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "places = [\" \",\"Argentina\", \" \", \"San Diego\",\"\",\"  \",\"\",\"Boston\",\"New York\"]\n",
     "\n",
@@ -883,17 +766,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Victor aNisimov', 'Gary A.J. Bernstein', 'Joel Carter', 'Andrew P. Garfield', 'David hassELHOFF']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "authors= [\"Joel Carter\", \"Victor aNisimov\", \"Andrew P. Garfield\",\"David hassELHOFF\",\"Gary A.J. Bernstein\"]\n",
     "\n",
@@ -916,17 +791,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('Nashua', 32.0), ('Boston', 12.000000000000002), ('Los Angelos', 44.0), ('Miami', 29.000000000000004)]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# F = (9/5)*C + 32\n",
     "# C = ((5.0/9.0)*(F - 32))\n",
@@ -962,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 25,
    "metadata": {
     "scrolled": true
    },
@@ -971,31 +838,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration(5):7\n"
+      "Iteration(0): 1\n",
+      "Iteration(1): 1\n",
+      "Iteration(2): 2\n",
+      "Iteration(3): 3\n",
+      "Iteration(4): 5\n",
+      "Iteration(5): 8\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<function __main__.Iteration(xn)>"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "def Iteration(xn):\n",
-    "    if xn <= 0:\n",
-    "        print(\"Iteration(0):1\")\n",
-    "        return 1\n",
-    "    else:\n",
-    "        print(f'Iteration({xn}):{xn -1 + xn - 2}')\n",
-    "        return Iteration \n",
-    "\n",
-    "Iteration(5)\n"
+    "def fib(n):\n",
+    "    for i in range(n + 1):\n",
+    "        print(\"Iteration({i}): {r}\".format(i=i,r=Iteration(i+1)))\n",
+    "        \n",
+    "fib(5)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1014,7 +879,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit (windows store)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1028,7 +893,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "vscode": {
    "interpreter": {
